--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,7 +17,23 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: build
+      - name: Download
+        run: | 
+          VERSION=$(curl -s https://api.github.com/repos/SagerNet/sing-box/releases/latest \
+          | grep tag_name \
+          | cut -d ":" -f2 \
+          | sed 's/\"//g;s/\,//g;s/\ //g;s/v//')
+          curl -Lo sing-box.tar.gz "https://github.com/SagerNet/sing-box/releases/download/v${VERSION}/sing-box-${VERSION}-linux-amd64.tar.gz"
+          curl -Lo geoip.db "https://github.com/lyc8503/sing-box-rules/releases/latest/download/geoip.db"
+          curl -Lo geosite.db "https://github.com/lyc8503/sing-box-rules/releases/latest/download/geosite.db"
+          tar -xzvf sing-box.tar.gz
+          mv ./sing-box-${VERSION}-linux-amd64/sing-box .
+          chmod +x sing-box
+
+      - name: Run
         run: .github/build.sh
-        env: 
+
+      - name: Release
+        run: .github/release-rule-set.sh
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
